# netnote

./: .gitignore  LICENSE  README.md  README_NETNOTE.txt  RELEASE.md  eslint.config.js  index.html  make_square.py  netnote.key  package-lock.json  package.json  pad_image.ps1  process_icons.ps1  process_logo.ps1  release.yml.bak
.github/workflows/: README.md  build-macos.yml  build.yml  release-linux-only.yml  release.yml  test-build.yml
.keys/: .gitignore  README.md  netnote-final.key  netnote-final.key.pub
scripts/: bump-version.sh  retrigger-release.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  meeting_detection.rs
src-tauri/src/ai/: mod.rs  ollama.rs  prompts.rs
src-tauri/src/audio/: aec.rs  macos.rs  mixer.rs  mod.rs  recorder.rs  system_audio.rs  windows.rs
src-tauri/src/commands/: ai.rs  audio.rs  export.rs  mod.rs  notes.rs  settings.rs  transcription.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/transcription/: live.rs  mod.rs  model.rs  transcriber.rs
src/api/: ai.ts  audio.ts  export.ts  index.ts  notes.ts  settings.ts  transcription.ts
src/components/: AudioPlayer.tsx  Dashboard.tsx  Logo.tsx  Logo3DCard.tsx  LogoImage.tsx  MeetingDetectedPopup.tsx  ModelManager.tsx  NoteEditor.tsx  NoteSearch.tsx  SummaryPanel.tsx  TranscriptSearch.tsx  TranscriptViewer.tsx  UpdateNotification.tsx  index.ts
src/components/icons/: NetNoteIcon.tsx
src/components/settings/: AboutTab.tsx  AppearanceTab.tsx  AvatarIcons.tsx  DisclaimerTab.tsx  OllamaTab.tsx  PrivacyTab.tsx  ProfileTab.tsx  Settings.tsx  ShortcutsTab.tsx  SystemTab.tsx  UpdatesTab.tsx  WarningIcon.tsx  WhisperTab.tsx  (+3 more)
src/hooks/: index.ts  useAI.ts  useNotes.ts  useRecording.ts  useSystemStatus.ts  useTranscription.ts  useUpdater.ts
src/stores/: appStore.ts  index.ts  meetingStore.ts  ollamaStore.ts  profileStore.ts  settingsStore.ts  themeStore.ts  updaterStore.ts  whisperStore.ts
src/types/: index.ts  note.ts
src/utils/: seeder.ts
